# newsletter.rs

./: .env  Cargo.toml  DEBUG_INFO.txt  README.md
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/components/: lib.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs
src/scripts/: init_db.sh
tests/: health_check.rs
