[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
tokio = {version = "1.28.2", features= ["full"] }
reqwest = { version = "0.11.18", features = ["json"] }
[lib]
path = "src/lib.rs"

[[bin]]
path="src/main.rs"
name="prog"
