[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
tokio = {version = "1.28.2", features= ["full"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1", features = ["derive"]}
config = "0.11"

sqlx = { version = "0.6.3", default-features = false,features = ["runtime-actix-rustls","macros","postgres","uuid","chrono", "migrate"]}
cargo-watch = "8.4.0"

[routes]
subscribe ="./src/routes/subscribe.rs"
[[bin]]
path="src/main.rs"
name="prog"

